--- a/listabonus.html
+++ b/listabonus.html
@@ -29,28 +29,43 @@
             <div class="regole-container">
 
                 <div class="item">
-                    <div class="item-text">Tirare 1 secchio</div>
+                    <div class="item-text">Trovare un bambino in una stanza non sua </div>
                     <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+20</div>
+                    <div class="item-count-bonus">+8 cad.</div>
                 </div>
                 <div class=" item-line"></div>
 
                 <div class="item">
-                    <div class="item-text">Aperitivo offerto dal bar </div>
+                    <div class="item-text">Camera doppia </div>
                     <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+30</div>
+                    <div class="item-count-bonus">+10</div>
                 </div>
                 <div class=" item-line"></div>
 
                 <div class="item">
-                    <div class="item-text">Pignare </div>
+                    <div class="item-text">coro dai bambini <br> <span style="color: #ea3928">(malus se è un
+                            insulto)</span> </div>
                     <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+20</div>
+                    <div class="item-count-bonus">+10</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Offire un aperitivo</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-bonus">+10 cad.</div>
                 </div>
                 <div class=" item-line"></div>
 
                 <div class="item">
                     <div class="item-text">Complimenti da 🎺 </div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-bonus">+15</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">outfit total white </div>
                     <div class="item-spacer"></div>
                     <div class="item-count-bonus">+15</div>
                 </div>
@@ -64,9 +79,16 @@
                 <div class=" item-line"></div>
 
                 <div class="item">
-                    <div class="item-text">Camera doppia </div>
+                    <div class="item-text">Tirare 1 secchio</div>
                     <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+10</div>
+                    <div class="item-count-bonus">+20</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Pignare </div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-bonus">+20</div>
                 </div>
                 <div class=" item-line"></div>
 
@@ -74,27 +96,6 @@
                     <div class="item-text">Far tornare la luce al Villaverde </div>
                     <div class="item-spacer"></div>
                     <div class="item-count-bonus">+20</div>
-                </div>
-                <div class=" item-line"></div>
-
-                <div class="item">
-                    <div class="item-text">Trovare un bambino in una stanza non sua </div>
-                    <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+8 cad.</div>
-                </div>
-                <div class=" item-line"></div>
-
-                <div class="item">
-                    <div class="item-text">Pignata al solemare senza essere beccati</div>
-                    <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+150</div>
-                </div>
-                <div class=" item-line"></div>
-
-                <div class="item">
-                    <div class="item-text">Organizzare uno scherzo CON Trisha e/o Marco </div>
-                    <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+35</div>
                 </div>
                 <div class=" item-line"></div>
 
@@ -108,24 +109,30 @@
                 <div class=" item-line"></div>
 
                 <div class="item">
-                    <div class="item-text">Offire un aperitivo</div>
+                    <div class="item-text">rosario al santamaria </div>
                     <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+10 cad.</div>
+                    <div class="item-count-bonus">+25</div>
                 </div>
                 <div class=" item-line"></div>
 
                 <div class="item">
-                    <div class="item-text">outfit total white </div>
+                    <div class="item-text">outfit total pink </div>
                     <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+15</div>
+                    <div class="item-count-bonus">+25</div>
                 </div>
                 <div class=" item-line"></div>
 
                 <div class="item">
-                    <div class="item-text">coro dai bambini <br> <span style="color: #ea3928">(malus se è un
-                            insulto)</span> </div>
+                    <div class="item-text">Aperitivo offerto dal bar </div>
                     <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+10</div>
+                    <div class="item-count-bonus">+30</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Organizzare uno scherzo CON Trisha e/o Marco </div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-bonus">+35</div>
                 </div>
                 <div class=" item-line"></div>
 
@@ -136,10 +143,18 @@
                 </div>
                 <div class=" item-line"></div>
 
+
                 <div class="item">
-                    <div class="item-text">far diventare il solemare un sole vero (dargli fuoco) </div>
+                    <div class="item-text">Pignata al solemare senza essere beccati</div>
                     <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+1200</div>
+                    <div class="item-count-bonus">+150</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">fare un castello di sabbia dentro al Sabbiadoro </div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-bonus">+500</div>
                 </div>
                 <div class=" item-line"></div>
 
@@ -151,16 +166,9 @@
                 <div class=" item-line"></div>
 
                 <div class="item">
-                    <div class="item-text">rosario al santamaria </div>
+                    <div class="item-text">far diventare il solemare un sole vero (dargli fuoco) </div>
                     <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+25</div>
-                </div>
-                <div class=" item-line"></div>
-
-                <div class="item">
-                    <div class="item-text">fare un castello di sabbia dentro al Sabbiadoro </div>
-                    <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+500</div>
+                    <div class="item-count-bonus">+1200</div>
                 </div>
                 <div class=" item-line"></div>
 
