--- a/listabonus.html
+++ b/listabonus.html
@@ -109,6 +109,13 @@
                 <div class=" item-line"></div>
 
                 <div class="item">
+                    <div class="item-text"> I bambini fanno un meme (che fa ridere) su di te</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-bonus">+25 </div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
                     <div class="item-text">rosario al santamaria </div>
                     <div class="item-spacer"></div>
                     <div class="item-count-bonus">+25</div>
@@ -143,6 +150,12 @@
                 </div>
                 <div class=" item-line"></div>
 
+                <div class="item">
+                    <div class="item-text">Postare un reel/video tema lignano che va virale</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-bonus">+60 </div>
+                </div>
+                <div class=" item-line"></div>
 
                 <div class="item">
                     <div class="item-text">Pignata al solemare senza essere beccati</div>
