--- a/listamalus.html
+++ b/listamalus.html
@@ -29,50 +29,129 @@
 
         <div class="regole-wrapper">
             <div class="regole-container">
-                <p class="elenco">regole 1 </p>
-                <p class="elenco">regole 2</p>
-                <p class="elenco">regole 3 </p>
-                <p class="elenco">regole 4 </p>
-                <p class="elenco">regole 5 </p>
-                <p class="elenco">regole 6 </p>
-                <p class="elenco">regole 7 </p>
-                <p class="elenco">regole 8 </p>
-                <p class="elenco">regole 9 </p>
-                <p class="elenco">regole 10 </p>
-                <p class="elenco">regole 11 </p>
-                <p class="elenco">regole 12 </p>
-                <p class="elenco">regole 13 </p>
-                <p class="elenco">regole 14 </p>
-                <p class="elenco">regole 15 </p>
-                <p class="elenco">regole 16 </p>
-                <p class="elenco">regole 17 </p>
-                <p class="elenco">regole 18 </p>
-                <p class="elenco">regole 19 </p>
-                <p class="elenco">regole 20 </p>
-                <p class="elenco">regole 21 </p>
-                <p class="elenco">regole 22 </p>
-                <p class="elenco">regole 23 </p>
-                <p class="elenco">regole 24 </p>
-                <p class="elenco">regole 25 </p>
-                <p class="elenco">regole 26 </p>
-                <p class="elenco">regole 27 </p>
-                <p class="elenco">regole 28 </p>
-                <p class="elenco">regole 29 </p>
-                <p class="elenco">regole 30 </p>
-                <p class="elenco">regole 31 </p>
-                <p class="elenco">regole 32 </p>
-                <p class="elenco">regole 33 </p>
-                <p class="elenco">regole 34 </p>
-                <p class="elenco">regole 35 </p>
-                <p class="elenco">regole 36 </p>
-                <p class="elenco">regole 37 </p>
-                <p class="elenco">regole 38 </p>
-                <p class="elenco">regole 39 </p>
-                <p class="elenco">regole 40 </p>
-                <p class="elenco">regole 41 </p>
-                <p class="elenco">regole 42 </p>
-                <p class="elenco">regole 43 </p>
-                <p class="elenco">regole 44 </p>
+                <div class="item">
+                    <div class="item-text">per ogni occhiale veloce comprato dai bambini dai bangladini</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-5</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">bambino ammalato <br> <span style="color: #ea3928"> ( x2 se stanno male in 2,
+                            x3 se in 3, x4 .. )</span></div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-5</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">prendere una secchiata</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-10</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">dimenticare materiale in spiaggia</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-10</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Ustionata</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-10</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Montare o smontare palestra VF</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-25</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Sgridata da Marco</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-25</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">mettere bambino su pullman sbagliato <br> <span style="color: green"> (+100
+                            botte da Albi)</span></div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-30</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Strombettata dall’uomo in persona
+                    </div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-30</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Bambino che va in pronto soccorso <br> <span style="color: #ea3928">(x2 se si
+                            è rotto qualcosa)</span></div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-30</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Responsabile trasporti</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-40</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Essere beccati mentre pigni</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-50</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Rimanere fuori da una stanza per un "affare losco"</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-50</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Fra berti che ti contatta per modificare disponibilità</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-50</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Fuoco amico <br> (fai male ad un* collega)</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-80</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Sgridata da LORO</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-100</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Mandato a casa a metà settimana</div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-malus">-1000</div>
+                </div>
+                <div class=" item-line"></div>
+
             </div>
         </div>
     </div>
