--- a/listabonus.html
+++ b/listabonus.html
@@ -173,15 +173,22 @@
 
                 <div class="item">
                     <div class="item-text">far diventare il villaverde più green🍃</div>
-                    <div class="item-spacer"></div>
+                    <div class="item-spacer-sm"></div>
                     <div class="item-count-bonus">+1000</div>
                 </div>
                 <div class=" item-line"></div>
 
                 <div class="item">
                     <div class="item-text">far diventare il solemare un sole vero (dargli fuoco) </div>
-                    <div class="item-spacer"></div>
+                    <div class="item-spacer-sm"></div>
                     <div class="item-count-bonus">+1200</div>
+                </div>
+                <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Complimenti (con stretta di mano) da LORO </div>
+                    <div class="item-spacer"></div>
+                    <div class="item-count-bonus">+99999999999</div>
                 </div>
 
             </div>
