--- a/listamalus.html
+++ b/listamalus.html
@@ -14,7 +14,7 @@
 
 <body style="background-color: #002651;">
 
-    <div class="bonus-1 pagina-wrapper">
+    <div class="bonus-1 pagina-wrapper-malus">
 
         <!-- pulsante per tornare al regolamentohome -->
         <a href="regolamentohome.html">
@@ -27,7 +27,7 @@
             </div>
         </div>
 
-        <div class="regole-wrapper">
+        <div class="regole-wrapper-malus">
             <div class="regole-container">
                 <div class="item">
                     <div class="item-text">per ogni occhiale veloce comprato dai bambini dai bangladini</div>
@@ -147,10 +147,16 @@
 
                 <div class="item">
                     <div class="item-text">Mandato a casa a metà settimana</div>
-                    <div class="item-spacer"></div>
+                    <div class="item-spacer-sm"></div>
                     <div class="item-count-malus">-1000</div>
                 </div>
                 <div class=" item-line"></div>
+
+                <div class="item">
+                    <div class="item-text">Denuncia (di qualsiasi tipo)</div>
+                    <div class="item-spacer-sm"></div>
+                    <div class="item-count-malus">-1500</div>
+                </div>
 
             </div>
         </div>
