--- a/contatti.html
+++ b/contatti.html
@@ -32,7 +32,7 @@
         <div class="contatti-wrapper">
             <p style="font-size: x-large;">non siamo un servizio clienti ma se hai bisogno puoi trovarci qui: </p>
             <a class="elenco" href="https://www.instagram.com/leonardobazza?igsh=cnhyYmNzdHUybG5n" target="_blank"
-                rel="noopener noreferrer" style="color:white; text-transform: lowercase"> <img
+                rel="noopener noreferrer" style="color:white; text-transform: lowercase;  "><img
                     src="img/insta-logo-white.svg" style="block-size: 25px;"> @leonardobazza</a>
             <a class="elenco" href="https://www.instagram.com/marrmoia?igsh=bmhycDBmbWFuaWt5m" target="_blank"
                 rel="noopener noreferrer" style="color:white; text-transform: lowercase"><img
