--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width">
 
     <link rel="stylesheet" href="style.css" />
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gluten:wght@400&display=swap" />
 
 </head>
 
@@ -49,7 +49,6 @@
     <img class="cone cone-icon3" alt="" src="img/pigna.png">
     <img class="cone cone-icon4" alt="" src="img/pigna.png">
     <img class="cone cone-icon5" alt="" src="img/pigna.png">
-
 
 </body>
 
