--- a/listabonus.html
+++ b/listabonus.html
@@ -188,7 +188,7 @@
                 <div class="item">
                     <div class="item-text">Complimenti (con stretta di mano) da LORO </div>
                     <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+99999999999</div>
+                    <div class="item-count-bonus">+9999</div>
                 </div>
 
             </div>
