bottone info su adminhome

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 </head>
 
-<body class="flex-container" style="height: 100vh; background-color: #c9f8fd; overflow-y: hidden;">
+<body class="flex-container" style="block-size: 100vh; background-color: #c9f8fd; overflow-y: hidden;">
 
-    <header class="flex-container" style="margin-top: 5vh;">
+    <header class="flex-container" style="margin-block-start: 5vh;">
         <div>
             <h1 class="benvenuto-al-text font1">
                 Benvenuto al
@@ -37,7 +37,7 @@
         </a>
     </main>
 
-    <footer class="flex-container" style="margin-top: 0.5rem; margin-bottom: 15vh;">
+    <footer class="flex-container" style="margin-block-start: 0.5rem; margin-block-end: 15vh;">
         <b class="a-tuo-rischio font2"> a tuo rischio e pericolo! </b>
         <img class="mingcutecopyright-line-icon" alt="" src="mingcute:copyright-line.svg">
     </footer>
