--- a/listabonus.html
+++ b/listabonus.html
@@ -79,7 +79,7 @@
                 <div class=" item-line"></div>
 
                 <div class="item">
-                    <div class="item-text">Tirare 1 secchio</div>
+                    <div class="item-text">Tirare 1 secchio (con senso) <br> <span style="color: #ea3928">(malus se è a caso/"di cattivo gusto")</span></div>
                     <div class="item-spacer"></div>
                     <div class="item-count-bonus">+20</div>
                 </div>
@@ -123,7 +123,7 @@
                 <div class=" item-line"></div>
 
                 <div class="item">
-                    <div class="item-text">outfit total pink </div>
+                    <div class="item-text">outfit total pink</div>
                     <div class="item-spacer"></div>
                     <div class="item-count-bonus">+25</div>
                 </div>
@@ -158,9 +158,9 @@
                 <div class=" item-line"></div>
 
                 <div class="item">
-                    <div class="item-text">Pignata al solemare senza essere beccati</div>
+                    <div class="item-text">Sfilata con conchiglie sui capezzoli al Conchiglia</div>
                     <div class="item-spacer"></div>
-                    <div class="item-count-bonus">+150</div>
+                    <div class="item-count-bonus">+69</div>
                 </div>
                 <div class=" item-line"></div>
 
