--- a/info.html
+++ b/info.html
@@ -18,7 +18,7 @@
     <div class="elimina-partita-admin">
 
         <!-- pulsante per tornare alla adminhome -->
-        <a href="adminhome.html">
+        <a href="password.html">
             <img src="img/IconBlue.png" alt="Icona" class="icon">
         </a>
         <div class="ue-boss">Avvisoo! </div>
