--- a/classifica.html
+++ b/classifica.html
@@ -26,17 +26,21 @@
         <div class="container">
             <div class="nomeg">
                 <div class="nomegtitolo font2"> nome </div>
-                <div class="nomegcaselle"> </div>
-                <div class="nomegcaselle"> </div>
-                <div class="nomegcaselle"> </div>
-                <div class="nomegcaselle"> </div>
+                <div class="nomegcaselle"> Ballerina Cappuccina </div>
+                <div class="nomegcaselle"> Bombardilo Crocodilo </div>
+                <div class="nomegcaselle"> Tung Tung Sahur </div>
+                <div class="nomegcaselle"> Chimpanzini Bananini</div>
+                <div class="nomegcaselle"> Tralalero Tralala</div>
+
             </div>
             <div class="puntidiv">
                 <div class="puntititolo font2"> punti </div>
-                <div class="punticaselle"> </div>
-                <div class="punticaselle"> </div>
-                <div class="punticaselle"> </div>
-                <div class="punticaselle"> </div>
+                <div class="punticaselle"> 23 </div>
+                <div class="punticaselle"> 19</div>
+                <div class="punticaselle"> 1</div>
+                <div class="punticaselle"> -12</div>
+                <div class="punticaselle"> -68</div>
+
             </div>
         </div>
 
@@ -45,11 +49,17 @@
         <a href="index.html">
             <img src="img/IconBlue.png" alt="Icona" class="icon">
         </a>
-        <!-- TODO start -->
+        <!-- TODO start 
         <input class="aggiungi-giocatore-wrapper font2" id="newplayer" placeholder="aggiungi giocatore"> </inpput>
+-->
+        <a href="https://wa.me/393889955188?text=Heyy!%20Aggiungimi%20al%20Fanta!%20Mi%20chiamo%20:" target="_blank"
+            class=" whatsapp-wrapper2 font2" style="padding: 10px;">
+            <div class="newplayer">scrivimi su Whatsapp</div>
+        </a>
         <!-- TODO finish -->
 
-        <!--
+        <!-- class whatsapp-wrapper
+         id: whatsapp
          TODO: 
         cambiare il colore di questa icona
          -->
