--- a/regolegenerali.html
+++ b/regolegenerali.html
@@ -50,10 +50,9 @@
                 <p class="elencoRG"
                     style="font-size: 20px; text-transform: uppercase; text-align: center; color: #ffd23e;">Come ci si
                     registra?</p>
-                <p class="elencoRG"> Nel pulsante partita, in basso, puoi aggiungere
-                    il tuo nome, nickname, qualsiasi cosa che mi faccia capire chi tu sia. Una volta premuto invio il
-                    nome dovrebbe apparire nell’elenco
-                    sopra</p>
+                <p class="elencoRG"> Nel pulsante partita, in basso, scrivimi il tuo nome, nickname, qualsiasi cosa che
+                    mi faccia capire chi tu sia. Appena riesco (questione di ore) aggiungo manualmente alla classifica.
+                </p>
                 <br>
 
                 <p class="elencoRG"
@@ -65,7 +64,7 @@
                 <p class="elencoRG"> Dato che non possono sapere tutto di tutti, <span
                         style="color: #ffd23e;">VOI</span> tutti dovete comunicargli chi fa
                     cosa</p>
-                <br>
+                <br>    
                 <p class="elencoRG" style="font-size: 15px">Turno 1 <a class="elencoRG"
                         href="https://www.instagram.com/giulia__salvatore?igsh=Z3BnMjExMXJjenA3" target="_blank"
                         rel="noopener noreferrer" style="color:white; text-transform: lowercase; font-size: 15px;">
