--- a/classifica.html
+++ b/classifica.html
@@ -53,8 +53,8 @@
         <input class="aggiungi-giocatore-wrapper font2" id="newplayer" placeholder="aggiungi giocatore"> </inpput>
 -->
         <a href="https://wa.me/393889955188?text=Heyy!%20Aggiungimi%20al%20Fanta!%20Mi%20chiamo%20:" target="_blank"
-            class=" whatsapp-wrapper2 font2" style="padding: 10px;">
-            <div class="newplayer">scrivimi su Whatsapp</div>
+            class=" whatsapp-wrapper2 font2" style="padding: 10px; font-size: 16px;">
+            <div class="newplayer">aggiungiti tramite Whatsapp</div>
         </a>
         <!-- TODO finish -->
 
